name: authy
version: 0.1.0

build-type: Simple
cabal-version: >= 1.10

license: MIT
license-file: LICENSE.md

copyright: 2017 Juan Pedro Villa Isaza
author: Juan Pedro Villa Isaza <jpvillaisaza@gmail.com>
maintainer: Juan Pedro Villa Isaza <jpvillaisaza@gmail.com>

homepage: https://github.com/jpvillaisaza/authy-haskell#readme
bug-reports: https://github.com/jpvillaisaza/authy-haskell/issues

synopsis: Bindings for the Authy API
description: Haskell bindings for the Authy API.

category: Web

tested-with: GHC == 8.0.2


extra-source-files:
  README.md


library
  hs-source-dirs:
      src
  exposed-modules:
      Authy
  build-depends:
      base >= 4.9 && < 4.10
  default-language:
      Haskell2010
  ghc-options:
      -Wall


source-repository head
  type: git
  location: https://github.com/jpvillaisaza/authy-haskell
